--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@yomguithereal/react-utilities": "^1.2.2",
     "normalize.css": "^4.2.0",
     "quinoa": "git+https://github.com/medialab/quinoa.git",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "uuid": "^2.0.2"
